part2/ex2.03/manifests/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pingpong-stripprefix
  namespace: exercises-namespace
spec: 
  stripPrefix:
    prefixes:
      - /pingpong
