part2/ex2.03/manifests/mainapplication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapplication-svc
  namespace: exercises-namespace
spec:
  type: ClusterIP
  selector:
    app: mainapplication
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8080
