part2/ex2.03/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pingpong-ingress
  namespace: exercises-namespace
spec:
  entryPoints: 
    - web
  routes:
    - match: PathPrefix(`/pingpong`)
      kind: Rule
      services:
        - name: pingpong-svc
          kind: Service
          port: 2347
      middlewares:
        - name: pingpong-stripprefix
    - match: Path(`/`)
      kind: Rule
      services:
        - name: mainapplication-svc
          kind: Service
          port: 2346
